turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:9: error: not found: value c
	case Color.BLACK => setCouleurSol(Color.WHITE) ;gauche();avance(); leveBrosse();c=Color.WHITE
                                                                                        ^LangtonsAnt:10: error: not found: value c
	case Color.WHITE => setCouleurSol(Color.BLACK) ;droite();avance(); leveBrosse();c=Color.BLACK
                                                                                        ^