turmites.lessons.turmites.langton.Langton.scala.code
def setCouleurSol(c:Color) {
	setCouleurBrosse(c)
	baisseBrosse()
}
var g = getCouleurSol()

def step() {	
	g match {
	case Color.BLACK => setCouleurSol(Color.WHITE) ;gauche();avance(); leveBrosse();c=Color.WHITE
	case Color.WHITE => setCouleurSol(Color.BLACK) ;droite();avance(); leveBrosse();c=Color.BLACK
}
}
